<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="hintTelefone">Ex: 12-93456-7980</string>
    <string name="email">Email</string>
    <string name="listaEmail">Ingressar na lista de e-mails?</string>
    <string name="sexo">Sexo</string>
    <string name="sexoM">Masculino</string>
    <string name="sexoF">Feminino</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="botaoLimpar">Limpar</string>
    <string name="botaoSalvar">Salvar</string>

    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>